# pcp-rs

./: Cargo.toml
.devcontainer/: on-create.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  install-extra-dependencies.sh  release.yml
pcp-sys/: Cargo.toml  build.rs
pcp-sys/examples/: pmdacounter.rs
pcp-sys/examples/counter/: Remove  root
pcp-sys/src/: lib.rs  macro.c  macro.h
pmda/: Cargo.toml
pmda-sys/: Cargo.toml  build.rs
pmda-sys/examples/: pmdacounter.rs
pmda-sys/src/: lib.rs  macro.c  macro.h
pmda/examples/: pmdacounter.rs
pmda/examples/counter/: Install  domain.h  help  pmns
pmda/src/: lib.rs
