[package]
name = "pmda-sys"
version = "0.1.0"
authors = ["9506hqwy"]
edition = "2021"
rust-version = "1.60"
repository = "https://github.com/9506hqwy/pcp-rs"
license = "MIT OR Apache-2.0"
keywords = ["pcp"]
categories = ["api-bindings"]

[build-dependencies]
bindgen = "0.66.1"
cc = "1.0"
pkg-config = "0.3.26"
