[package]
name = "pmda-sys"
keywords = ["pcp"]
categories = ["api-bindings"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[build-dependencies]
bindgen = "0.69.1"
cc = "1.0"
pkg-config = "0.3.27"
