[package]
name = "pmda"
version = "0.1.0"
authors = ["9506hqwy"]
edition = "2021"
rust-version = "1.60"
repository = "https://github.com/9506hqwy/pcp-rs"
license = "MIT OR Apache-2.0"
keywords = ["pcp"]
categories = ["api-bindings"]

[dependencies]
pmda-sys = { path="../pmda-sys" }

[dev-dependencies]
once_cell = "1.18.0"
