[package]
name = "pmda"
keywords = ["pcp"]
categories = ["api-bindings"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
pmda-sys = { path="../pmda-sys" }

[dev-dependencies]
once_cell = "1.18.0"
